# libcec

src/dotnetlib/LibCecSharp/: LibCecSharp.vcxproj
src/dotnetlib/LibCecSharpCore/: LibCecSharpCore.vcxproj
src/libcec/cmake/: CheckPlatformSupport.cmake
src/pyCecClient/: CMakeLists.txt
windows/: create-installer.cmd
